# simi-flow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
benches/: algorithms.rs  stress.rs
docs/: ALGOS.md  ROUTER.md  SIMI-DOCS.md
examples/: deduplicate.rs  flow.rs  names.rs  preprocess.rs
js/: README.md  index.d.ts  index.js  package.json  test.js
python/: README.md
python/tests/: test_simi.py
scripts/: bump-version.sh  release.sh
src/: batch.rs  error.rs  lib.rs  nodejs.rs  prelude.rs  preprocess.rs  python.rs  router.rs
src/algo/: bm25.rs  hamming.rs  jaccard.rs  jaro_winkler.rs  levenshtein.rs  minhash.rs  mod.rs  simhash.rs  tfidf.rs
tests/: roundtrip.rs
