[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "simi-flow"
version = "0.1.1"
description = "SIMI — a similarity and text-analysis engine: 8 algorithms plus intent-aware routing for matching, dedup, spam, and bot protection"
readme = "python/README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "SIKTEC Lab", email = "siktec.lab@gmail.com" }]
keywords = ["similarity", "levenshtein", "jaro-winkler", "bm25", "tf-idf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/siktec-lab/simi-flow"
Repository = "https://github.com/siktec-lab/simi-flow"
Issues = "https://github.com/siktec-lab/simi-flow/issues"

[tool.maturin]
bindings = "pyo3"
features = ["python"]
module-name = "simi"
